Fix toast bugs - not showing on devices outside localhost - toast sometimes cleared from DOM too soon

--- a/webui/src/assets/css/components/toast.css
+++ b/webui/src/assets/css/components/toast.css
@@ -2,8 +2,11 @@
    POSITIONING CONTAINERS
 ========================= */
 
-.toast-container {
+:root {
     --toast-animation-duration: 500ms;
+}
+
+.toast-container {
 
     z-index: 9999;
     position: fixed;
